# Python-discord-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  data.py  emojis.py  install.sh  jeu.py  main.py  mathboss.py  pyproject.toml  quizz.py  test.py
.github/workflows/: black.yml  flake8.yml  isort.yml
bot/: __main__.py  dictionnary.py  emojis.py  knowledge.py
bot/cogs/: admin.py  alea.py  chess.py  motus.py  music.py  on_ready.py  pendu.py  quizz.py  ratio.py  snake.py
chess_prog/: test.py
chess_prog/Pieces/: bishop.py  king.py  knight.py  pawn.py  piece.py  queen.py  tower.py
